Prideta paieskos funkcija

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">Apie mus</a>
     </nav>
 
+   
+
     <!-- Top menu -->
     <div class="w3-top">
         <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
@@ -31,25 +33,34 @@
         </div>
     </div>
 
+
+   
+
     <!-- !PAGE CONTENT! -->
     <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
 
+      <div>
+      
+        <input type="text" id="searchField" placeholder="Įveskite paieškos tekstą">
+        <input type="button" id="btnSearch" value="Ieškoti">
+        
+      </div>
         <!-- First Photo Grid-->
         <div class="w3-row-padding w3-padding-16 w3-center" id="food">
             <div class="w3-third">
                 <img src="IMG/bulves.png" alt="bulves" style="width:100%">
-                <h3>Bulvės</h3>
+                <h3 class="searchItem">Bulvės</h3>
                 <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
             </div>
             <div class="w3-third">
                 <img src="IMG/morkos.png" alt="morkos" style="width:100%">
-                <h3>Morkos</h3>
+                <h3 class="searchItem">Morkos</h3>
                 <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.
                 </p>
             </div>
             <div class="w3-third">
                 <img src="IMG/pomidorai.png" alt="pomidorai" style="width:100%">
-                <h3>Pomidorai</h3>
+                <h3 class="searchItem">Pomidorai</h3>
                 <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
                 <p>What else?</p>
             </div>
@@ -57,18 +68,18 @@
         <div class="w3-row-padding w3-padding-16 w3-center">
             <div class="w3-third">
                 <img src="IMG/citrinos.png" alt="citrinos" style="width:100%">
-                <h3>Citrinos</h3>
+                <h3 class="searchItem">Citrinos</h3>
                 <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
             </div>
             <div class="w3-third">
                 <img src="IMG/kriauses.png" alt="kriauses" style="width:100%">
-                <h3>Kriaušės</h3>
+                <h3 class="searchItem">Kriaušės</h3>
                 <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.
                 </p>
             </div>
             <div class="w3-third">
                 <img src="IMG/obuoliai.png" alt="obuoliai" style="width:100%">
-                <h3>Obuoliai</h3>
+                <h3 class="searchItem">Obuoliai</h3>
                 <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
             </div>
            </div>
