--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">Apie mus</a>
     </nav>
 
+
+
     <!-- Top menu -->
     <div class="w3-top">
         <div class="w3-white w3-xlarge" style="max-width:1200px;margin:auto">
@@ -34,47 +36,55 @@
     <!-- !PAGE CONTENT! -->
     <div class="w3-main w3-content w3-padding" style="max-width:1200px;margin-top:100px">
 
+        <div id="myBtnContainer">
+            <button class="btn active" onclick="filterSelection('all')"> Visi</button>
+            <button class="btn" onclick="filterSelection('vaisiai')"> Vaisiai</button>
+            <button class="btn" onclick="filterSelection('darzoves')"> Daržovės</button>
+        </div>
+
+
         <!-- First Photo Grid-->
         <div class="w3-row-padding w3-padding-16 w3-center" id="food">
-            <div class="w3-third">
+            <div class="w3-third filterDiv darzoves">
                 <img src="IMG/bulves.png" alt="bulves" style="width:100%">
                 <h3>Bulvės</h3>
                 <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
             </div>
-            <div class="w3-third">
+            <div class="w3-third filterDiv darzoves">
                 <img src="IMG/morkos.png" alt="morkos" style="width:100%">
                 <h3>Morkos</h3>
                 <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.
                 </p>
             </div>
-            <div class="w3-third">
+            <div class="w3-third filterDiv darzoves">
                 <img src="IMG/pomidorai.png" alt="pomidorai" style="width:100%">
                 <h3>Pomidorai</h3>
                 <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
                 <p>What else?</p>
             </div>
-               <!-- Second Photo Grid-->
-        <div class="w3-row-padding w3-padding-16 w3-center">
-            <div class="w3-third">
-                <img src="IMG/citrinos.png" alt="citrinos" style="width:100%">
-                <h3>Citrinos</h3>
-                <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+            <!-- Second Photo Grid-->
+            <div class="w3-row-padding w3-padding-16 w3-center">
+                <div class="w3-third filterDiv vaisiai">
+                    <img src="IMG/citrinos.png" alt="citrinos" style="width:100%">
+                    <h3>Citrinos</h3>
+                    <p>Lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+                </div>
+                <div class="w3-third filterDiv vaisiai">
+                    <img src="IMG/kriauses.png" alt="kriauses" style="width:100%">
+                    <h3>Kriaušės</h3>
+                    <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum
+                        lipsum.
+                    </p>
+                </div>
+                <div class="w3-third filterDiv vaisiai">
+                    <img src="IMG/obuoliai.png" alt="obuoliai" style="width:100%">
+                    <h3>Obuoliai</h3>
+                    <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
+                </div>
             </div>
-            <div class="w3-third">
-                <img src="IMG/kriauses.png" alt="kriauses" style="width:100%">
-                <h3>Kriaušės</h3>
-                <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.
-                </p>
-            </div>
-            <div class="w3-third">
-                <img src="IMG/obuoliai.png" alt="obuoliai" style="width:100%">
-                <h3>Obuoliai</h3>
-                <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
-            </div>
-           </div>
 
-        <!-- Pagination -->
-        <!-- <div class="w3-center w3-padding-32">
+            <!-- Pagination -->
+            <!-- <div class="w3-center w3-padding-32">
             <div class="w3-bar">
                 <a href="#" class="w3-bar-item w3-button w3-hover-black">«</a>
                 <a href="#" class="w3-bar-item w3-black w3-button">1</a>
@@ -85,29 +95,41 @@
             </div>
         </div> -->
 
-        <hr id="about">
+            <hr id="about">
 
-        <!-- About Section -->
-        <div class="w3-container w3-padding-32 w3-center">
-            <h3>Mūsų komanda</h3><br>
-            <img src="IMG/team.jpg" alt="komanda" class="w3-image" style="display:block;margin:auto" width="800"
-                height="533">
-            <div class="w3-padding-32">
-                <h4><b>Žygimantas, Artūras ir Romanas!</b></h4>
-                  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo suscipit error sit, rem exercitationem eveniet natus dignissimos iste molestias tempora dolorem vitae eos quibusdam rerum, harum nisi adipisci cum doloremque pariatur officiis voluptatem enim repellat quis culpa. Hic, quas nihil totam dolorum quaerat molestiae vero suscipit dolore illum numquam et nisi enim eveniet harum expedita. Animi numquam ipsa, sit consectetur, accusamus cupiditate nostrum soluta vel, nesciunt nemo eos repellendus molestias impedit voluptas harum ea voluptate id minus inventore. Itaque, nulla deserunt? Eius quis, dolorem libero dignissimos labore suscipit commodi atque quidem asperiores hic corrupti sunt, quae ea unde aliquid soluta quasi harum quaerat iusto sequi? Quas rem reiciendis iste explicabo at dignissimos vel ratione temporibus veniam aspernatur aperiam magni eligendi itaque exercitationem soluta optio nulla cupiditate animi laborum asperiores recusandae, fugit totam! Nemo dignissimos, reprehenderit nostrum quibusdam sequi delectus earum.</p>
+            <!-- About Section -->
+            <div class="w3-container w3-padding-32 w3-center">
+                <h3>Mūsų komanda</h3><br>
+                <img src="IMG/team.jpg" alt="komanda" class="w3-image" style="display:block;margin:auto" width="800"
+                    height="533">
+                <div class="w3-padding-32">
+                    <h4><b>Žygimantas, Artūras ir Romanas!</b></h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo suscipit error sit, rem
+                        exercitationem eveniet natus dignissimos iste molestias tempora dolorem vitae eos quibusdam
+                        rerum, harum nisi adipisci cum doloremque pariatur officiis voluptatem enim repellat quis culpa.
+                        Hic, quas nihil totam dolorum quaerat molestiae vero suscipit dolore illum numquam et nisi enim
+                        eveniet harum expedita. Animi numquam ipsa, sit consectetur, accusamus cupiditate nostrum soluta
+                        vel, nesciunt nemo eos repellendus molestias impedit voluptas harum ea voluptate id minus
+                        inventore. Itaque, nulla deserunt? Eius quis, dolorem libero dignissimos labore suscipit commodi
+                        atque quidem asperiores hic corrupti sunt, quae ea unde aliquid soluta quasi harum quaerat iusto
+                        sequi? Quas rem reiciendis iste explicabo at dignissimos vel ratione temporibus veniam
+                        aspernatur aperiam magni eligendi itaque exercitationem soluta optio nulla cupiditate animi
+                        laborum asperiores recusandae, fugit totam! Nemo dignissimos, reprehenderit nostrum quibusdam
+                        sequi delectus earum.</p>
+                </div>
             </div>
+            <hr>
+
+            <!-- Footer -->
+            <footer class="w3-row-padding w3-padding-32">
+                <div class="">
+                    <h3>FOOTER</h3>
+                    <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae,
+                        ultricies
+                        congue gravida diam non fringilla.</p>
+
+                </div>
         </div>
-        <hr>
-
-        <!-- Footer -->
-        <footer class="w3-row-padding w3-padding-32">
-            <div class="">
-                <h3>FOOTER</h3>
-                <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies
-                    congue gravida diam non fringilla.</p>
-               
-            </div>
-            </div>
         </footer>
 
         <!-- End page content -->
@@ -127,6 +149,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
     </script>
+
     <script src="js/main.js"></script>
 </body>
 
