--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             </div>
             <!-- Second Photo Grid-->
             <div class="w3-row-padding w3-padding-16 w3-center">
-                <div class="w3-third">
+                <div class="w3-third filterDiv vaisiai">
                     <img src="IMG/citrinos.png" alt="citrinos" style="width:100%">
                     <h3>Citrinos</h3>
                     <h4>Vidutinis svoris</h4>
@@ -270,7 +270,7 @@
 
                     </ul>
                 </div>
-                <div class="w3-third">
+                <div class="w3-third filterDiv vaisiai">
                     <img src="IMG/kriauses.png" alt="kriauses" style="width:100%">
                     <h3>Kriaušės</h3>
                     <h4>Vidutinis svoris</h4>
@@ -325,7 +325,7 @@
 
                     </ul>
                 </div>
-                <div class="w3-third">
+                <div class="w3-third filterDiv vaisiai">
                     <img src="IMG/obuoliai.png" alt="obuoliai" style="width:100%">
                     <h3>Obuoliai</h3>
                     <h4>Vidutinis svoris</h4>
